Refactor RepeatAction to use JsonNode for forEach
Updated RepeatAction and RepeatActionContext to use JsonNode for the forEach property, enabling more robust and flexible iteration over various data types. Refactored convertToIterable to handle JsonNode input, supporting arrays, single values, and JSON strings. Added comprehensive tests for repeat action with different forEach value types.